ros2/log/build_2020-11-18_12-48-53/jarvis_core/stderr.log
  File "/home/jarvis/workspace/ros2/install/jarvis_core/lib/python3.8/site-packages/jarvis_core/core.py", line 34
    print binascii.hexlify(bytes)
          ^
SyntaxError: invalid syntax

